[profile.release]
lto = true

[profile.release.package.anchor-cli]
codegen-units = 1

[workspace]
members = [
    "leetcode-two-sum",
    "codility-possible-string-palindrome",
    "codility-binary-gap",
    "codility-array-rotation",
    "codility-frog-jump",
    "leetcode-queue-reconstruction-by-height",
    "leetcode-add-two-numbers",
    "leetcode-basic-calculator-ii",
    "leetcode-car-pooling",
    "leetcode-subtract-the-product-and-sum-of-digits-of-an-integer",
    "leetcode-longest-word-in-dictionary-through-deleting",
    "leetcode-check-if-number-has-equal-digit-count-and-digit-value",
    "leetcode-numbers-with-same-consecutive-differences",
    "leetcode-design-a-stack-with-increment-operation",
]
