[profile.release]
lto = true

[workspace]
members = [
    "leetcode-two-sum",
    "codility-possible-string-palindrome",
    "codility-binary-gap",
    "codility-array-rotation",
    "codility-frog-jump",
    "leetcode-queue-reconstruction-by-height",
    "leetcode-add-two-numbers",
    "leetcode-basic-calculator-ii",
    "leetcode-car-pooling",
    "leetcode-subtract-the-product-and-sum-of-digits-of-an-integer",
    "leetcode-longest-word-in-dictionary-through-deleting",
    "leetcode-check-if-number-has-equal-digit-count-and-digit-value",
    "leetcode-numbers-with-same-consecutive-differences",
    "leetcode-design-a-stack-with-increment-operation",
    "leetcode-jump-game-iv",
    "leetcode-longest-substring-without-repeating-characters",
    "leetcode-furthest-building-you-can-reach",
    "leetcode-build-an-array-with-stack-operations",
    "university-of-princeton-quick-find",
    "university-of-princeton-quick-union",
    "university-of-princeton-weighted-quick-union",
    "university-of-princeton-path-compressed-weighted-quick-union",
    "university-of-princeton-path-compressed-weighted-quick-union-social",
    "university-of-princeton-path-compressed-weighted-quick-union-canonical-element",
    "university-of-princeton-path-compressed-percolation-threshold-via-monte-carlo-simulation",
    "university-of-princeton-3sum",
    "gg-kadanes-algorithm",
    "leetcode-k-concat-max-sum",
    "adaface-rust-tricky-quiz",
    "gg-minimize-the-heights",
]
